media/gpu/fake_command_buffer_helper.cc
@@ -5,15 +5,22 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "media/gpu/fake_command_buffer_helper.h"
 
+#include "base/logging.h"
+
 namespace media {
 
 FakeCommandBufferHelper::FakeCommandBufferHelper(
     scoped_refptr<base::SingleThreadTaskRunner> task_runner)
-    : task_runner_(std::move(task_runner)) {}
+    : task_runner_(std::move(task_runner)) {
+  DVLOG(1) << __func__;
+}
 
-FakeCommandBufferHelper::~FakeCommandBufferHelper() = default;
+FakeCommandBufferHelper::~FakeCommandBufferHelper() {
+  DVLOG(1) << __func__;
+}
 
 void FakeCommandBufferHelper::StubLost() {
+  DVLOG(1) << __func__;
   DCHECK(task_runner_->BelongsToCurrentThread());
   has_stub_ = false;
   is_context_lost_ = true;
@@ -23,22 +30,26 @@ void FakeCommandBufferHelper::StubLost() {
 }
 
 void FakeCommandBufferHelper::ContextLost() {
+  DVLOG(1) << __func__;
   DCHECK(task_runner_->BelongsToCurrentThread());
   is_context_lost_ = true;
   is_context_current_ = false;
 }
 
 void FakeCommandBufferHelper::CurrentContextLost() {
+  DVLOG(2) << __func__;
   DCHECK(task_runner_->BelongsToCurrentThread());
   is_context_current_ = false;
 }
 
 bool FakeCommandBufferHelper::HasTexture(GLuint service_id) {
+  DVLOG(4) << __func__ << "(" << service_id << ")";
   DCHECK(task_runner_->BelongsToCurrentThread());
   return service_ids_.count(service_id);
 }
 
 void FakeCommandBufferHelper::ReleaseSyncToken(gpu::SyncToken sync_token) {
+  DVLOG(3) << __func__;
   DCHECK(task_runner_->BelongsToCurrentThread());
   DCHECK(waits_.count(sync_token));
   task_runner_->PostTask(FROM_HERE, std::move(waits_[sync_token]));
@@ -46,11 +57,13 @@ void FakeCommandBufferHelper::ReleaseSyncToken(gpu::SyncToken sync_token) {
 }
 
 gl::GLContext* FakeCommandBufferHelper::GetGLContext() {
+  DVLOG(4) << __func__;
   DCHECK(task_runner_->BelongsToCurrentThread());
   return nullptr;
 }
 
 bool FakeCommandBufferHelper::MakeContextCurrent() {
+  DVLOG(3) << __func__;
   DCHECK(task_runner_->BelongsToCurrentThread());
   is_context_current_ = !is_context_lost_;
   return is_context_current_;
@@ -62,6 +75,7 @@ GLuint FakeCommandBufferHelper::CreateTexture(GLenum target,
                                               GLsizei height,
                                               GLenum format,
                                               GLenum type) {
+  DVLOG(2) << __func__;
   DCHECK(task_runner_->BelongsToCurrentThread());
   DCHECK(is_context_current_);
   GLuint service_id = next_service_id_++;
@@ -70,6 +84,7 @@ GLuint FakeCommandBufferHelper::CreateTexture(GLenum target,
 }
 
 void FakeCommandBufferHelper::DestroyTexture(GLuint service_id) {
+  DVLOG(2) << __func__ << "(" << service_id << ")";
   DCHECK(task_runner_->BelongsToCurrentThread());
   DCHECK(is_context_current_);
   DCHECK(service_ids_.count(service_id));
@@ -77,6 +92,7 @@ void FakeCommandBufferHelper::DestroyTexture(GLuint service_id) {
 }
 
 void FakeCommandBufferHelper::SetCleared(GLuint service_id) {
+  DVLOG(2) << __func__;
   DCHECK(task_runner_->BelongsToCurrentThread());
   DCHECK(service_ids_.count(service_id));
 }
@@ -84,6 +100,7 @@ void FakeCommandBufferHelper::SetCleared(GLuint service_id) {
 bool FakeCommandBufferHelper::BindImage(GLuint service_id,
                                         gl::GLImage* image,
                                         bool can_bind_to_sampler) {
+  DVLOG(2) << __func__ << "(" << service_id << ")";
   DCHECK(task_runner_->BelongsToCurrentThread());
   DCHECK(service_ids_.count(service_id));
   DCHECK(image);
@@ -91,16 +108,21 @@ bool FakeCommandBufferHelper::BindImage(GLuint service_id,
 }
 
 gpu::Mailbox FakeCommandBufferHelper::CreateMailbox(GLuint service_id) {
+  DVLOG(2) << __func__ << "(" << service_id << ")";
   DCHECK(task_runner_->BelongsToCurrentThread());
   DCHECK(service_ids_.count(service_id));
+  if (!has_stub_)
+    return gpu::Mailbox();
   return gpu::Mailbox::Generate();
 }
 
 void FakeCommandBufferHelper::WaitForSyncToken(gpu::SyncToken sync_token,
                                                base::OnceClosure done_cb) {
+  DVLOG(2) << __func__;
   DCHECK(task_runner_->BelongsToCurrentThread());
   DCHECK(!waits_.count(sync_token));
-  waits_.emplace(sync_token, std::move(done_cb));
+  if (has_stub_)
+    waits_.emplace(sync_token, std::move(done_cb));
 }
 
 }  // namespace media
